# ssh_connect

./: LICENSE  README.md  install.py  pyproject.toml  requirements.txt  ssh_connect.yml.example
ssh_connect/: __main__.py  app.py  config.py  session.py  themes.py  utils.py
ssh_connect/ui/: confirm.py  pubkey_selector.py  selector.py
